Header and global styles added

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Pizza CO</title>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap"
+			rel="stylesheet"
+		/>
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -14,6 +20,19 @@
 		<link rel="stylesheet" href="css/style.css" />
 	</head>
 	<body>
+		<!-- Header -->
+
+		<header class="header">
+			<a href="#" header__brand>
+				<img
+					src="images/logo/pizza-light.png"
+					alt="Pizza Co Logo"
+					class="header__brand__img"
+				/>
+			</a>
+		</header>
+
+		<!-- Header end -->
 		<script src="main.js"></script>
 	</body>
 </html>
