--- a/index.html
+++ b/index.html
@@ -30,9 +30,41 @@
 					class="header__brand__img"
 				/>
 			</a>
+
+			<!-- Navigation -->
+
+			<input type="checkbox" class="nav-toggle" />
+			<label for="nav-toggle" class="nav-toggle__icon"
+				><span class="nav-toggle__icon-span"></span
+			></label>
+
+			<nav class="nav">
+				<ul class="nav__links">
+					<li class="nav__links__li">
+						<a href="#about" class="nav__link">About</a>
+					</li>
+					<li class="nav__links__li">
+						<a href="#menu" class="nav__link">Menu</a>
+					</li>
+					<li class="nav__links__li">
+						<a href="#delivery" class="nav__link">Delivery</a>
+					</li>
+					<li class="nav__links__li">
+						<a href="#news" class="nav__link">News</a>
+					</li>
+					<li class="nav__links__li">
+						<a href="mailTo:contact@pizza.co" class="nav__link"
+							>contact@pizza.co</a
+						>
+					</li>
+				</ul>
+			</nav>
+
+			<!-- Navigation end -->
 		</header>
 
 		<!-- Header end -->
+
 		<script src="main.js"></script>
 	</body>
 </html>
