--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 			rel="stylesheet"
 		/>
 		<link
+			href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
+			rel="stylesheet"
+		/>
+		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
 			integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
@@ -62,6 +66,28 @@
 
 			<!-- Navigation end -->
 		</header>
+
+		<!-- Main -->
+
+		<main>
+			<!-- Banner -->
+			<section id="banner" class="banner">
+				<div class="banner__bg-container">
+					<img
+						class="banner__bg-img"
+						src="images/img/herro-bg.jpg"
+						alt="Background Image"
+					/>
+				</div>
+				<div class="banner__content">
+					<h1 class="banner__content--h1">Check out the</h1>
+					<h2 class="banner__content--h2">Best pizza in town</h2>
+					<a href="#" class="btn btn-lg">Book now</a>
+				</div>
+			</section>
+			<!-- Banner end -->
+		</main>
+		<!-- Main end -->
 
 		<!-- Header end -->
 
