About section done

--- a/index.html
+++ b/index.html
@@ -85,7 +85,54 @@
 					<a href="#" class="btn btn-lg">Book now</a>
 				</div>
 			</section>
+
 			<!-- Banner end -->
+
+			<!-- About -->
+
+			<section id="about" class="about">
+				<h2 class="about__heading">
+					<span class="about__heading__back">Our</span>
+					<span class="about__heading__front">Story</span>
+				</h2>
+				<div class="about__content-left">
+					<p>
+						Hello and welcome to pizza.co. We've been making delicious pizzas
+						since the last 15 years. And along the way we've picked up a few
+						things about how to make the most delicious pizza and steak.
+					</p>
+				</div>
+				<div class="about__content-right">
+					<p>
+						Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
+						nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
+						erat, sed diam. invidunt ut labore et dolore magna aliquyam erat,
+						sed diam. Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
+						sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
+						aliquyam erat, sed diam. invidunt ut labore et dolore magna aliquyam
+						erat, sed diam. eirmod tempor invidunt ut labore et dolore magna
+						aliquyam erat, sed diam. invidunt ut labore et dolore magna aliquyam
+						erat, sed diam.
+					</p>
+				</div>
+
+				<div class="about__figures">
+					<div class="about__figure">
+						<div class="about__figure-number">15</div>
+						<div class="about__figure-text">Year of experience</div>
+					</div>
+					<div class="about__figure">
+						<div class="about__figure-number">10.000</div>
+						<div class="about__figure-text">Customer served</div>
+					</div>
+					<div class="about__figure">
+						<div class="about__figure-number">9</div>
+						<div class="about__figure-text">Menu items</div>
+					</div>
+				</div>
+			</section>
+
+			<!-- About end -->
 		</main>
 		<!-- Main end -->
 
