Menu section added

--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
 			<!-- Navigation end -->
 		</header>
 
+		<!-- Header end -->
+
 		<!-- Main -->
 
 		<main>
@@ -91,9 +93,9 @@
 			<!-- About -->
 
 			<section id="about" class="about">
-				<h2 class="about__heading">
-					<span class="about__heading__back">Our</span>
-					<span class="about__heading__front">Story</span>
+				<h2 class="section__heading">
+					<span class="section__heading__back">Our</span>
+					<span class="section__heading__front">Story</span>
 				</h2>
 				<div class="about__content-left">
 					<p>
@@ -133,10 +135,128 @@
 			</section>
 
 			<!-- About end -->
-		</main>
-		<!-- Main end -->
 
-		<!-- Header end -->
+			<!-- Menu -->
+
+			<section id="menu" class="menu">
+				<h2 class="section__heading">
+					<span class="section__heading__back">Discover</span>
+					<span class="section__heading__front">Our Menu</span>
+				</h2>
+				<div class="menu__left">
+					<div class="menu__item">
+						<img
+							src="images/img/menu-item-img1.jpg"
+							alt="Original Chicken Pizza"
+						/>
+
+						<div class="menu__item-content--container">
+							<div class="memu__item-content">
+								<h4 class="menu__item-title">Original Chicken Pizza</h4>
+								<p class="menu__item-desc">Comes with a side of kajun fries</p>
+							</div>
+							<div class="menu__item-line"></div>
+						</div>
+						<p class="menu__item-price">$12.99</p>
+					</div>
+					<div class="menu__item">
+						<img
+							src="images/img/menu-item-img2.jpg"
+							alt="Original Beef Pizza"
+						/>
+
+						<div class="menu__item-content--container">
+							<div class="memu__item-content">
+								<h4 class="menu__item-title">Original Beef Pizza</h4>
+								<p class="menu__item-desc">Comes with a side of kajun fries</p>
+							</div>
+							<div class="menu__item-line"></div>
+						</div>
+						<p class="menu__item-price">$15.99</p>
+					</div>
+					<div class="menu__item">
+						<img
+							src="images/img/menu-item-img3.jpg"
+							alt="Portobello mushroom Pizza"
+						/>
+
+						<div class="menu__item-content--container">
+							<div class="memu__item-content">
+								<h4 class="menu__item-title">Portobello mushroom Pizza</h4>
+								<p class="menu__item-desc">Comes with a side of kajun fries</p>
+							</div>
+							<div class="menu__item-line"></div>
+						</div>
+						<p class="menu__item-price">$10.99</p>
+					</div>
+					<div class="menu__item">
+						<img src="images/img/menu-item-img4.jpg" alt="Veggie Pizza" />
+
+						<div class="menu__item-content--container">
+							<div class="memu__item-content">
+								<h4 class="menu__item-title">Veggie Pizza</h4>
+								<p class="menu__item-desc">Comes with a side of kajun fries</p>
+							</div>
+							<div class="menu__item-line"></div>
+						</div>
+						<p class="menu__item-price">$12.99</p>
+					</div>
+				</div>
+				<div class="menu__right">
+					<div class="menu__item">
+						<img src="images/img/menu-item-img5.jpg" alt="Black Bean Pizza" />
+
+						<div class="menu__item-content--container">
+							<div class="memu__item-content">
+								<h4 class="menu__item-title">Black Bean Pizza</h4>
+								<p class="menu__item-desc">Comes with a side of kajun fries</p>
+							</div>
+							<div class="menu__item-line"></div>
+						</div>
+						<p class="menu__item-price">$14.99</p>
+					</div>
+					<div class="menu__item">
+						<img src="images/img/menu-item-img6.jpg" alt="Wild Salmon Pizza" />
+
+						<div class="menu__item-content--container">
+							<div class="memu__item-content">
+								<h4 class="menu__item-title">Wild Salmon Pizza</h4>
+								<p class="menu__item-desc">Comes with a side of kajun fries</p>
+							</div>
+							<div class="menu__item-line"></div>
+						</div>
+						<p class="menu__item-price">$18.99</p>
+					</div>
+					<div class="menu__item">
+						<img src="images/img/menu-item-img7.jpg" alt="Fish Pizza" />
+
+						<div class="menu__item-content--container">
+							<div class="memu__item-content">
+								<h4 class="menu__item-title">Fish Pizza</h4>
+								<p class="menu__item-desc">Comes with a side of kajun fries</p>
+							</div>
+							<div class="menu__item-line"></div>
+						</div>
+						<p class="menu__item-price">$12.99</p>
+					</div>
+					<div class="menu__item">
+						<img src="images/img/menu-item-img8.jpg" alt="Sliced steak Pizza" />
+
+						<div class="menu__item-content--container">
+							<div class="memu__item-content">
+								<h4 class="menu__item-title">Sliced steak Pizza</h4>
+								<p class="menu__item-desc">Comes with a side of kajun fries</p>
+							</div>
+							<div class="menu__item-line"></div>
+						</div>
+						<p class="menu__item-price">$36.99</p>
+					</div>
+				</div>
+			</section>
+			<!-- Menu end -->
+		</main>
+
+		<!-- Main end -->
 
 		<script src="main.js"></script>
 	</body>
