Reservation section done

--- a/index.html
+++ b/index.html
@@ -254,6 +254,18 @@
 				</div>
 			</section>
 			<!-- Menu end -->
+
+			<!-- Reservation  -->
+
+			<section class="subsection subsection__reserve">
+				<div>
+					<h2>Make a reservation</h2>
+					<p class="subsection__sub-heading">And Discover Our Delicious Menu</p>
+					<a href="#" class="btn">Book now</a>
+				</div>
+			</section>
+
+			<!-- Reservation end -->
 		</main>
 
 		<!-- Main end -->
