Section delivery done

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<!-- Header -->
 
 		<header class="header">
-			<a href="#" header__brand>
+			<a href="#" class="header__brand">
 				<img
 					src="images/logo/pizza-light.png"
 					alt="Pizza Co Logo"
@@ -37,7 +37,7 @@
 
 			<!-- Navigation -->
 
-			<input type="checkbox" class="nav-toggle" />
+			<input type="checkbox" class="nav-toggle" name="nav-toggle" />
 			<label for="nav-toggle" class="nav-toggle__icon"
 				><span class="nav-toggle__icon-span"></span
 			></label>
@@ -266,6 +266,27 @@
 			</section>
 
 			<!-- Reservation end -->
+
+			<!-- Delivery -->
+
+			<section id="delivery" class="delivery">
+				<h2 class="section__heading">
+					<span class="section__heading__back">We</span>
+					<span class="section__heading__front">Deliver</span>
+				</h2>
+				<div class="image-grid">
+					<img src="images/pic/pizza-1.jpg" class="img1" alt="Pizza 1" />
+					<img src="images/pic/pizza-2.jpg" class="img2" alt="Pizza 2" />
+					<img src="images/pic/pizza-3.jpg" class="img3" alt="Pizza 3" />
+					<img src="images/pic/pizza-4.jpg" class="img4" alt="Pizza 4" />
+					<img src="images/pic/pizza-5.jpg" class="img5" alt="Pizza 5" />
+					<img src="images/pic/pizza-6.jpg" class="img6" alt="Pizza 6" />
+					<img src="images/pic/pizza-7.jpg" class="img7" alt="Pizza 7" />
+					<img src="images/pic/pizza-8.jpg" class="img8" alt="Pizza 8" />
+				</div>
+			</section>
+
+			<!-- Delivery end -->
 		</main>
 
 		<!-- Main end -->
