Section partners done

--- a/index.html
+++ b/index.html
@@ -287,6 +287,18 @@
 			</section>
 
 			<!-- Delivery end -->
+
+			<!-- Partners -->
+			<section class="subsection subsection__partners">
+				<h2>Delivery partners</h2>
+				<div class="delivery__partners">
+					<img src="images/logo/partner-1-dark.png" alt="Deliver partner 1" />
+					<img src="images/logo/partner-2-dark.png" alt="Deliver partner 2" />
+					<img src="images/logo/partner-3-dark.png" alt="Deliver partner 3" />
+					<img src="images/logo/partner-4-dark.png" alt="Deliver partner 4" />
+				</div>
+			</section>
+			<!-- Partners end -->
 		</main>
 
 		<!-- Main end -->
