--- a/index.html
+++ b/index.html
@@ -289,6 +289,7 @@
 			<!-- Delivery end -->
 
 			<!-- Partners -->
+
 			<section class="subsection subsection__partners">
 				<h2>Delivery partners</h2>
 				<div class="delivery__partners">
@@ -298,7 +299,70 @@
 					<img src="images/logo/partner-4-dark.png" alt="Deliver partner 4" />
 				</div>
 			</section>
+
 			<!-- Partners end -->
+
+			<!-- News -->
+
+			<section class="news" id="news">
+				<h2 class="section__heading">
+					<span class="section__heading__back">Our</span>
+					<span class="section__heading__front">News Blog</span>
+				</h2>
+				<div class="blog">
+					<article>
+						<div class="blog__img">
+							<img src="images/img/article.jpg" alt="Article Image" />
+							<div class="blog__share-btn">
+								<img src="images/img/share.svg" alt="Share Article" />
+							</div>
+						</div>
+						<div class="blog__body">
+							<h3 class="blog__title">How it's made</h3>
+							<p class="blog__desc">
+								Our Food Is Freshly Handmade Using Seasonal Ingredients And
+								Using The Most Fresh Produce Locally Sourced.
+							</p>
+							<a href="#" class="read-more">Read more</a>
+						</div>
+					</article>
+					<article class="blog__second">
+						<div class="blog__img">
+							<img src="images/img/article.jpg" alt="Article Image" />
+							<div class="blog__share-btn">
+								<img src="images/img/share.svg" alt="Share Article" />
+							</div>
+						</div>
+						<div class="blog__body">
+							<h3 class="blog__title">New Starters</h3>
+							<p class="blog__desc">
+								We Are Always Looking For Ways To Improve Your Dining Experience
+								With You That's Why We Are Launching A Fresh New Line Of
+								Delicious Starters.
+							</p>
+							<a href="#" class="read-more">Read more</a>
+						</div>
+					</article>
+					<article>
+						<div class="blog__img">
+							<img src="images/img/article.jpg" alt="Article Image" />
+							<div class="blog__share-btn">
+								<img src="images/img/share.svg" alt="Share Article" />
+							</div>
+						</div>
+						<div class="blog__body">
+							<h3 class="blog__title">Menu update</h3>
+							<p class="blog__desc">
+								We've Added Some New Delicious Items To Our Menu. And We'll Be
+								Adding Various Cocktails And Mocktails To The Menu Soon.
+							</p>
+							<a href="#" class="read-more">Read more</a>
+						</div>
+					</article>
+				</div>
+			</section>
+
+			<!-- News end -->
 		</main>
 
 		<!-- Main end -->
