--- a/index.html
+++ b/index.html
@@ -363,6 +363,39 @@
 			</section>
 
 			<!-- News end -->
+
+			<!-- Contact -->
+
+			<section class="contact" id="contact">
+				<div class="form">
+					<h2>Contact Us</h2>
+					<div class="form-group">
+						<fieldset>
+							<legend>Get started with your booking</legend>
+							<label for="name">
+								<input type="text" name="name" placeholder="Your name" />
+							</label>
+							<label for="email">
+								<input type="email" name="email" placeholder="Your email" />
+							</label>
+							<label for="subject">
+								<input type="text" name="subject" placeholder="Subject" />
+							</label>
+							<label for="message">
+								<textarea name="message" placeholder="Your message"></textarea>
+							</label>
+						</fieldset>
+					</div>
+					<button type="submit" class="btn">Send Message</button>
+				</div>
+				<div class="contact-images">
+					<img src="images/img/contact-1.jpg" alt="Contact Image 1" />
+					<img src="images/img/contact-2.jpg" alt="Contact Image 2" />
+					<img src="images/img/contact-3.jpg" alt="Contact Image 3" />
+				</div>
+			</section>
+
+			<!-- Contact end -->
 		</main>
 
 		<!-- Main end -->
