--- a/index.html
+++ b/index.html
@@ -400,6 +400,47 @@
 
 		<!-- Main end -->
 
+		<!-- Footer -->
+
+		<footer>
+			<div class="footer-top">
+				<div class="footer__logo">
+					<img src="images/logo/pizza-dark.png" alt="Pizza Co Logo" />
+				</div>
+				<div class="footer__links">
+					<ul>
+						<li><a href="#about" class="footer__link">About</a></li>
+						<li><a href="#menu" class="footer__link">Menu</a></li>
+						<li><a href="#delivery" class="footer__link">Delivery</a></li>
+						<li><a href="#news" class="footer__link">News</a></li>
+					</ul>
+				</div>
+				<div class="footer__social-links">
+					<ul>
+						<li>
+							<a href="#" class="social-link"
+								><i class="fa-brands fa-facebook"></i
+							></a>
+						</li>
+						<li>
+							<a href="#" class="social-link"
+								><i class="fa-brands fa-instagram"></i
+							></a>
+						</li>
+						<li>
+							<a href="#" class="social-link"
+								><i class="fa-brands fa-twitter"></i
+							></a>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<div class="footer__bottom">
+				<p>&copf; Pizza Co 2024 - All Rights Reserved</p>
+			</div>
+		</footer>
+		<!-- Footer end -->
+
 		<script src="main.js"></script>
 	</body>
 </html>
